Added url as a callable string. URL is still a localhost

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,8 @@
     <string name="knotList">Knute Liste</string>
     <string name="settings">Instillinger</string>
     <string name="logout">Log ut</string>
-    <string name="hello_world">hello</string>
-    <string name="first">first</string>
-    <string name="last">last</string>
 
+    <!-- SERVER URL -->
+    <string name="url">http://158.38.193.72/</string>
 
 </resources>
