--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="logout">Log ut</string>
 
     <!-- SERVER URL -->
-    <string name="url">http://18.196.123.217/</string>
+    <string name="url">http://ec2-18-196-123-217.eu-central-1.compute.amazonaws.com:8080/</string>
 
 </resources>
